--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,9 +7,5 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
-
-<body>
-
-</body>
-
+<body></body>
 </html>
