--- a/index.html
+++ b/index.html
@@ -16,9 +16,12 @@
     <hr class="line">
     <main>
         <section>
+            <img src="./assets/images/Photo.jpg" alt="photo">
             <h2>Julia Zalesskaya</h2>
-            <h4>Number: +375(29)394-24-30</h4>
-            <h4>E-mail: jz3942430@gmail.com</h4>
+            <ul>
+                <li>Number: +375(29)394-24-30</li>
+                <li>E-mail: jz3942430@gmail.com</li>
+            </ul>
         </section>
         <section>
             <h2>Summary</h2>
