--- a/index.html
+++ b/index.html
@@ -10,47 +10,58 @@
 </head>
 
 <body>
+    <div class="wrapper">
     <header>
         <h1 class="cv">CV</h1>
+        <hr class="line">
+        <nav class="navigation-list">
+            <ul class="navigation-items">
+                <li class="items-links"><a href="#mainInformation">Main information</a></li>
+                <li class="items-links"><a href="#summary">Summary</a></li>
+                <li class="items-links"><a href="#skills">Skills</a></li>
+                <li class="items-links"><a href="#expirience">Expirience</a></li>
+                <li class="items-links"><a href="#education">Education</a></li>
+                <li class="items-links"><a href="#english">English</a></li>
+            </ul>
+        </nav>
     </header>
-    <hr class="line">
-    <main>
-        <section>
+    <main class="main-info">
+        <section id="mainInformation">
             <img src="./assets/images/Photo.jpg" alt="photo">
             <h2>Julia Zalesskaya</h2>
-            <ul>
+            <ul class="items-list">
                 <li>Number: +375(29)394-24-30</li>
                 <li>E-mail: jz3942430@gmail.com</li>
             </ul>
         </section>
-        <section>
+        <section class="summary">
             <h2>Summary</h2>
             <p>I am reliable hard-working person, i have a good leadership qualities, flexibility and ability <br>
                 to effectively handle multiple projects and meet deadlines.</p>
         </section>
-        <section>
+        <section class="skills">
             <h2>Skills</h2>
-            <ul>
+            <ul class="items-list">
                 <li>HTML / CSS</li>
                 <li>JS</li>
                 <li>Figma</li>
                 <li>Adobe Photoshop / Adobe Illustrator</li>
             </ul>
         </section>
-        <section>
+        <section class="experience">
             <h2>Experience</h2>
             <h3>FastoGT</h3>
-            <ul>
+            <ul class="items-list">
                 <li> Web-designer</li>
                 <li> UX/UI specialist</li>
             </ul>
         </section>
-        <section>
+        <section class="education">
             <h2>Education</h2>
             <h3>School of business of BSU</h3>
             <p>Business administration</p>
         </section>
-        <section>
+        <section class="english">
             <h2>English</h2>
             <h3>B1</h3>
         </section>
@@ -60,8 +71,9 @@
         <img class="logo-image" src="./assets/images/rs_school-og.png" alt="RS-school logo">
         <a class="links-footer" href="https://github.com/zalesskayaa">My Github account</a>
         <a class="links-footer" href="https://rs.school/js-stage0/">RS-school Course</a>
-        <p>2015</p>
+        <p>2022</p>
     </footer>
+</div>
 </body>
 
 </html>
